--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             </h3>
         </div>
         <div class="counter_settings">
-            <div class="text">
-                <input type="text" id="countinput">
-            </div>
+           <label id="countinput"></label>
             <div class="countbtn">
              <button id="Increment">Increment</button>
              <button id="Decrement">Decrement</button>
